2004-06-14  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/translation.cc (initialize_gettext): Only call
	bind_textdomain_codeset() if it is available.  I do hope there
	aren't any gettext implementations around that perform encoding
	conversion but don't have bind_textdomain_codeset()...

2004-06-14  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/sharedptr.h (SharedPtr): Add dummy template specializations
	for SharedObject and const SharedObject.  This makes it impossible
	to instantiate a generic SharedPtr<SharedObject>, which would be
	fatal because SharedObject doesn't have a virtual destructor.

2004-06-14  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/sharedptr.h (SharedObject::refcount_): Change type to long,
	so that a full word will be used on 64 bit machines.
	(SharedPtr): Add a paragraph about operator const void*() to the
	class description.

2004-06-09  Daniel Elstner  <daniel.elstner@gmx.net>

	* autogen.sh: Append an XGETTEXT_KEYWORDS = ... line to the
	generated po/Makefile.in.in file.  These flags are picked up
	by intltool-update and passed to xgettext.  Use this feature
	to make xgettext recognize Util::compose() format strings.

2004-06-09  Daniel Elstner  <daniel.elstner@gmx.net>

	* configure.ac (GETTEXT_PACKAGE): Use a plain shell assignment
	plus a separate AC_SUBST([GETTEXT_PACKAGE]) in order to please
	the fucked up intltool-update script.

2004-06-09  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/translation.h (translate): Add G_GNUC_FORMAT(1) attribute.

2004-06-09  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/filetree.cc (FileTree::find_add_file): Create the FileInfo
	object in advance before inserting the new row in order to improve
	exception safety.
	(FileTree::find_fill_dirstack): Same here for the DirInfo object.

2004-06-09  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/filetreeprivate.{cc,h} (FileTreePrivate::next_match_file):
	Move code from FileTree::next_match_file() here.
	(FileTreePrivate::prev_match_file):